# DxcLastVersion

./: Analyse.py  README.md  an.py  analyse_auto.py  main.py  nettoyage.py  pyproject.toml
views/: Analyse.py  ChatbotRh.py  Galery.py  RechercheParTechno.py  RecuperationDuMail .py  Technos.py  UploadCv.py
