[project]
name = "lastversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imaplib2>=3.6",
    "json5>=0.12.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.28",
    "openai>=1.97.1",
    "pymongo>=4.13.2",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.0",
]
